fixed top pane description alignment in some browsers

--- a/Webpage/css/main.scss
+++ b/Webpage/css/main.scss
@@ -69,7 +69,7 @@ header{
             #navbarTopLi3 {
                 float: right;
                 clear: none;
-                text-align-last: right;
+                text-align: right;
                 margin-right: 1%;
                 width: 32%
             }
